--- a/css/root/main.scss
+++ b/css/root/main.scss
@@ -109,7 +109,7 @@ section {
             position: absolute;
             width: 20px;
             height: 20px;
-            background-image: url(.././images//bullet.svg);
+            background-image: url(../../images//bullet.svg);
             background-size: contain;
             margin-right:  .5em;
         }
