--- a/css/root/main.css
+++ b/css/root/main.css
@@ -115,7 +115,7 @@ section {
   position: absolute;
   width: 20px;
   height: 20px;
-  background-image: url(../images//bullet.svg);
+  background-image: url(../../images//bullet.svg);
   background-size: contain;
   margin-right: .5em;
 }
