--- a/css/root/main.scss
+++ b/css/root/main.scss
@@ -13,7 +13,7 @@ body {
 .navbar {
     background: white;
     padding: 1em;
-
+    border-radius: 5.3em;
 
     .logo{
         text-decoration: none;
@@ -31,6 +31,7 @@ body {
     .container {
         display: flex;
         place-content: space-between;
+        
     }
     .mobile-nav {
         cursor: pointer;
@@ -89,13 +90,15 @@ section {
 
 .features-section {
     background: rgb(29, 116, 167);
-    color: white
+    color: white;
+    border-radius: 3em;
 }
 
 .features-list {
     margin: 0;
     padding: .1em;
     display: grid;
+  
     grid-template-columns: repeat(auto-fit, minmax(19rem, 1fr));
 
     li {
@@ -200,6 +203,7 @@ nav {
     .navbar .container {
         display: grid;
         grid-template-columns: 180px auto;
+        border-radius: 1;
         
     }
 
@@ -273,3 +277,17 @@ nav {
         margin-right: 8em;
     }
 }
+
+.dark-mode {
+    background-color: rgb(34, 36, 48);
+    color: white;
+  }
+
+
+    textarea {
+        font-family: Poppins;
+    }
+
+    input {
+        font-family: Poppins;
+    }
