--- a/home.css
+++ b/home.css
@@ -40,6 +40,7 @@ body {
 
 .navbar .mobile-nav {
   cursor: pointer;
+  width: 7.5%;
 }
 
 a {
@@ -287,4 +288,4 @@ textarea {
 input {
   font-family: Poppins;
 }
-/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=home.css.map */
